Bug 337138 - A lot of icons are missing in System Settings -> Classic Tree view
Summary: A lot of icons are missing in System Settings -> Classic Tree view
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Theme - Breeze (show other bugs)
Version: master
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Andrew Lake
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-06 09:41 UTC by Valerio De Angelis
Modified: 2014-10-01 13:22 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed In:
aleixpol: VisualDesign+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Valerio De Angelis 2014-07-06 09:41:39 UTC
I'm using Neon 20140704

Open System Settings, go in configure then choice the Classic Tree View.
A lot of icons are missing here and there.

Screenshot:
http://s13.postimg.org/nrid75ytj/snapshot2.png

Reproducible: Always

Steps to Reproduce:
1. Login into the ISO
2. Go in System Settings
3. Configure it in classic Tree View
Actual Results:  
Icons missing.

Expected Results:  
Icons visible.
Comment 1 Bhushan Shah 2014-07-06 11:04:21 UTC
*** Bug 337137 has been marked as a duplicate of this bug. ***
Comment 2 Bhushan Shah 2014-07-06 11:06:55 UTC
I am not sure if bug is in kiconthemes or breeze really have missing icons..
Comment 3 Aleix Pol 2014-07-08 13:30:27 UTC
Works here with Oxygen (style and icons)
Comment 4 Valerio De Angelis 2014-07-08 18:45:47 UTC
Right, with oxygen it works, except for the 
Personalisation -> Application -> File Search, that is wrong/missing.

So it seems an issue related to the Breeze icon set.
Comment 5 Andrew Lake 2014-07-08 18:50:30 UTC
My currently understanding of the implementation is that the when the Breeze icon set is selected it should fall back to oxygen for any missing icons. Is there something wrong with the fallback mechanism?
Comment 6 Henri K 2014-08-27 13:59:49 UTC
Also colors and size of fonts are wrong. I use "Obsidian coast" so the background is dark and text is supposed to be white but in tree view the right side of window uses black and blue font colors. Font size is also smaller than what is set in Font settings. These make the text very hard to read.
Comment 7 David Edmundson 2014-09-30 23:32:48 UTC
@Henri lets put other bugs in new reports otherwise it gets confusing

There's something wrong in iconloader.

Code is:
iconL->iconPath(childItem->service()->icon(), - KIconLoader::SizeSmallMedium )

I'm getting (with qDebug) 

/opt/kde5/share/icons/breeze/apps/preferences/preferences-desktop-theme.svgz

It clearly can't be an SVGZ
Comment 8 David Edmundson 2014-09-30 23:37:21 UTC
Edit: apparently it can be an svgz.

breeze icon set doesn't install pixel icons (not sure if that's a bug?)

because classic systemsettings is using HTML to render it just puts a path to the file

kiconloader returns an SVGZ

khtml can't render it (and yes, we're still using khtml here)
Comment 9 David Edmundson 2014-10-01 13:22:38 UTC
Git commit b872365e3104aaaaf9d3fdb40820db321cfe58d0 by David Edmundson.
Committed on 01/10/2014 at 13:23.
Pushed by davidedmundson into branch 'Plasma/5.1'.

Pass icons by data instead of path

This fixes issues if the icon is an SVG

M  +16   -1    classic/CategoryList.cpp

http://commits.kde.org/systemsettings/b872365e3104aaaaf9d3fdb40820db321cfe58d0