Pass icons by data instead of path

This fixes issues if the icon is an SVG

BUG: 337138